Change full case comma to  half case comma in php

--- a/database/call_function.html
+++ b/database/call_function.html
@@ -74,7 +74,7 @@ Obviously not all function calls are identical between platforms，so there are 
 
 <p>Any parameters needed by the function you are calling will be added to the second parameter.</p>
 
-<code>$this->db->call_function('<var>some_function</var>'，$param1，$param2，etc..);</code>
+<code>$this->db->call_function('<var>some_function</var>', $param1, $param2, etc..);</code>
 
 
 <p>Often，you will either need to supply a database connection ID or a database result ID.  The connection ID can be accessed using:</p>
