--- a/database/connecting.html
+++ b/database/connecting.html
@@ -134,8 +134,8 @@ $this->load->database(<samp>$dsn</samp>);</code>
 <p>假如想要同時使用多個資料庫，您可以使用底下方式:</p>
 
 
-<code>$DB1 = $this->load->database('group_one'，TRUE);<br />
-$DB2 = $this->load->database('group_two'，TRUE);
+<code>$DB1 = $this->load->database('group_one', TRUE);<br />
+$DB2 = $this->load->database('group_two', TRUE);
 </code>
 
 <p>注意: 更改上面字串 "group_one" 和 "group_two" 為您所要指定的連接資料庫名稱(或者是您也可以使用如上所述的參數連接值).</p>
