--- a/database/fields.html
+++ b/database/fields.html
@@ -93,7 +93,7 @@ foreach ($query->list_fields() as $field)<br />
 <p>針對您所需要操作的資料欄位，可以利用底下函式判斷資料欄位示否存在。回傳布林函數值 TRUE/FALSE.  使用範例::</p>
 
 <code>
-if ($this->db->field_exists('field_name'，'table_name'))<br />
+if ($this->db->field_exists('field_name', 'table_name'))<br />
 {<br />
 &nbsp;&nbsp; // some code...<br />
 }
