--- a/general/helpers.html
+++ b/general/helpers.html
@@ -117,7 +117,7 @@
 
 <code>
 // any_in_array() 並不在 Array 補助函數中，所以要定義一個新函數<br />
-function any_in_array($needle，$haystack)<br />
+function any_in_array($needle, $haystack)<br />
 {<br />
 &nbsp;&nbsp;&nbsp;&nbsp;$needle = (is_array($needle)) ? $needle : array($needle);<br />
 	<br />
