--- a/general/plugins.html
+++ b/general/plugins.html
@@ -85,7 +85,7 @@
 
 <p>假如需要載入更多的外掛模組到 array 的話，你可以這麼做:</p>
 
-<code>$this->load->plugin( <samp>array(</samp>'<var>plugin1</var>'，'<var>plugin2</var>'，'<var>plugin3</var>'<samp>)</samp> );</code>
+<code>$this->load->plugin( <samp>array(</samp>'<var>plugin1</var>', '<var>plugin2</var>', '<var>plugin3</var>'<samp>)</samp> );</code>
 
 <h2>自動載入外掛模組(Plugins)</h2>
 
