--- a/general/styleguide.html
+++ b/general/styleguide.html
@@ -561,7 +561,7 @@ _convert_text()		// 私有方法</code>
 
 			<p>在一些 display_errors 設定關閉，而你也沒有辦法改變 php.ini 中設定的伺服器上，你可以這樣來開啟：</p>
 
-<code>ini_set('display_errors'，1);</code>
+<code>ini_set('display_errors', 1);</code>
 
 			<p class="important"><strong>注意：</strong>在執行時期用 ini_set() 來設定 <a href="http://us.php.net/manual/en/ref.errorfunc.php#ini.display-errors">display_errors</a> 並不等於在 PHP 環境中啟動它。換句話說，如果你的程式出現嚴重錯誤，那可能就沒效了。</p>
 		</div>
