--- a/general/views.html
+++ b/general/views.html
@@ -201,7 +201,7 @@ class Blog extends CI_Controller {
 
 	function index()
 	{
-		$data['todo_list'] = array('Clean House'，'Call Mom'，'Run Errands');
+		$data['todo_list'] = array('Clean House', 'Call Mom', 'Run Errands');
 
 		$data['title'] = "My Real Title";
 		$data['heading'] = "My Real Heading";
