--- a/helpers/email_helper.html
+++ b/helpers/email_helper.html
@@ -82,7 +82,7 @@ else<br />
 {<br />
 &nbsp;&nbsp;&nbsp;&nbsp;echo 'email is not valid';<br />
 }</code>
-<h2>send_email('<var>recipient</var>'，'<var>subject</var>'，'<var>message</var>')</h2>
+<h2>send_email('<var>recipient</var>', '<var>subject</var>', '<var>message</var>')</h2>
 <p>使用 PHP 內定的本機 <a href="http://www.php.net/function.mail">mail ()</a> 函數發送一封電子郵件。如果需要更強大的電子郵件解決方案，請參考 CodeIgniter 的 Email 類。</p>
 </div>
 <!-- END CONTENT -->
