--- a/helpers/inflector_helper.html
+++ b/helpers/inflector_helper.html
@@ -91,7 +91,7 @@ echo plural($word); // Returns "dogs"
 
 <p>若要強迫一個單字以 "es" 當作結尾，則把第二個參數設定為「true」。</p>
 <code> $word = &quot;pass&quot;;<br />
-echo plural($word，TRUE); // Returns &quot;passes&quot; </code>
+echo plural($word, TRUE); // Returns &quot;passes&quot; </code>
 
 <h2>camelize()</h2>
 <p>把一個以空格或以底線分隔的單字更改為駱駝拼寫法( 混合使用英文大小寫字母來構成變數和函數的名稱，每一個關鍵字都有一個大寫字母或底線來標記，命名時變數和函數的名稱第一個英文字母小寫 )。參考範例：</p>
