--- a/helpers/language_helper.html
+++ b/helpers/language_helper.html
@@ -69,12 +69,12 @@
 
 <p>下面的函數就可以使用了:</p>
 
-<h2>lang('<var>language line</var>'，'<var>element id</var>')</h2>
+<h2>lang('<var>language line</var>', '<var>element id</var>')</h2>
 
 <p>此函數使用簡單的語法從指定載入的語言檔中傳回一行文字。這種語法在視圖文件中可能比執行 <kbd>$this-&gt;lang-&gt;line()</kbd>.
 	更具意義。可選擇的第二個參數還將為你輸出一個表單。參考範例：</p>
 
-<code>echo lang('<samp>language_key</samp>'，'<samp>form_item_id</samp>');<br />
+<code>echo lang('<samp>language_key</samp>', '<samp>form_item_id</samp>');<br />
 // becomes &lt;label for="form_item_id"&gt;language_key&lt;/label&gt;</code>
 
 
