--- a/helpers/path_helper.html
+++ b/helpers/path_helper.html
@@ -77,10 +77,10 @@ echo set_realpath($directory);<br />
 // returns &quot;/etc/passwd&quot;<br />
 <br />
 $non_existent_directory = '/path/to/nowhere';<br />
-echo set_realpath($non_existent_directory，TRUE);<br />
+echo set_realpath($non_existent_directory, TRUE);<br />
 // returns an <strong>error</strong>，as the path could not be resolved
 <br /><br />
-echo set_realpath($non_existent_directory，FALSE);<br />
+echo set_realpath($non_existent_directory, FALSE);<br />
 // returns &quot;/path/to/nowhere&quot;
 
 
