--- a/helpers/url_helper.html
+++ b/helpers/url_helper.html
@@ -82,7 +82,7 @@ URL 輔助函數
 <p>這是一個以陣列形式傳遞 URI 段的例子:</p>
 
 <code>
-$segments = array('news'，'local'，'123');<br />
+$segments = array('news', 'local', '123');<br />
 <br />
 echo site_url($segments);</code>
 
@@ -221,7 +221,7 @@ $url_title = url_title($title);<br />
 </code>
 
 
-<p>第二個參數指定單字之間的分隔符號。有：破折號'<dfn>-</dfn>'， 或者 底線'<dfn>_</dfn>'兩種選項，預設值使用破折號'-': </p>
+<p>第二個參數指定單字之間的分隔符號。有：破折號'<dfn>-</dfn>'，或者 底線'<dfn>_</dfn>'兩種選項，預設值使用破折號'-': </p>
 
 <code>$title = "What's wrong with CSS?";<br />
 <br />
