--- a/libraries/encryption.html
+++ b/libraries/encryption.html
@@ -119,7 +119,7 @@ $encrypted_string = $this->encrypt->encode($msg);</code>
 $msg = 'My secret message';<br />
 $key = 'super-secret-key';<br />
 <br />
-$encrypted_string = $this->encrypt->encode($msg，$key);</code>
+$encrypted_string = $this->encrypt->encode($msg, $key);</code>
 
 
 <h2>$this->encrypt->decode()</h2>
