--- a/libraries/image_lib.html
+++ b/libraries/image_lib.html
@@ -97,7 +97,7 @@ $config['maintain_ratio'] = TRUE;<br />
 $config['width']		= 75;<br />
 $config['height']	= 50;<br />
 <br />
-$this->load->library('image_lib'，$config);
+$this->load->library('image_lib', $config);
 <br />
 <br />
 $this->image_lib->resize();</code>
@@ -138,7 +138,7 @@ folder containing the image files must have write permissions.</p>
 
 <p>注意:  你可以選擇性的指定錯誤訊息的HTML格式，只消在參數指定開頭/結尾標籤，就像:</p>
 
-<code>$this->image_lib->display_errors('<var>&lt;p></var>'，'<var>&lt;/p></var>');</code>
+<code>$this->image_lib->display_errors('<var>&lt;p></var>', '<var>&lt;/p></var>');</code>
 
 
 <h2>Preferences 喜好設定</h2>
