--- a/libraries/language.html
+++ b/libraries/language.html
@@ -91,7 +91,7 @@ $lang['<var>error</var>_username_missing'] = "您必須填入帳號名稱";</cod
 
 <p>使用檔案資料之前，您必須先將檔案載入，利用下面方式取得資料:</p>
 
-<code>$this->lang->load('<samp>filename</samp>'，'<dfn>language</dfn>');</code>
+<code>$this->lang->load('<samp>filename</samp>', '<dfn>language</dfn>');</code>
 
 <p><samp>filename</samp> 是你要讀取的檔案名稱(不需要加上副檔名)，<dfn>language</dfn>
 是哪個語言所包含的檔案 (例如，english). 假如沒有設定第二個參數，將會使用
