--- a/libraries/typography.html
+++ b/libraries/typography.html
@@ -94,7 +94,7 @@ Typography 類別
 
 <p>預設值為: FALSE</p>
 
-<code>$string = $this->typography->auto_typography($string，<kbd>FALSE</kbd>);</code>
+<code>$string = $this->typography->auto_typography($string, <kbd>FALSE</kbd>);</code>
 
 
 <p class="important"><strong>注意:</strong> 當有大量的內容要格式化時，你可以考慮將網頁做 <a href="../general/caching.html">caching</a></p>
