--- a/libraries/user_agent.html
+++ b/libraries/user_agent.html
@@ -98,7 +98,7 @@ else<br />
 <br />
 echo $agent;<br />
 <br />
-echo $this->agent->platform(); // Platform info (Windows，Linux，Mac，etc.)
+echo $this->agent->platform(); // Platform info (Windows, Linux, Mac, etc.)
 </code>
 
 
