--- a/database/forge.html
+++ b/database/forge.html
@@ -165,24 +165,24 @@ already be running，since the forge class relies on it.</p>
 <h2><a name="add_key" id="add_key"></a>Adding Keys</h2>
 <p>Generally speaking，you'll want your table to have Keys. This is accomplished with <dfn>$this-&gt;dbforge-&gt;add_key('field')</dfn>. An optional second parameter set to TRUE will make it a primary key. Note that <dfn>add_key()</dfn> must be followed by a call to <dfn>create_table()</dfn>.</p>
 <p>Multiple column non-primary keys must be sent as an array.  Sample output below is for MySQL.</p>
-<p><code>$this-&gt;dbforge-&gt;add_key('blog_id'，TRUE);<br />
+<p><code>$this-&gt;dbforge-&gt;add_key('blog_id', TRUE);<br />
 	// gives PRIMARY KEY `blog_id` (`blog_id`)<br />
 	<br />
-	$this-&gt;dbforge-&gt;add_key('blog_id'，TRUE);<br />
-	$this-&gt;dbforge-&gt;add_key('site_id'，TRUE);<br />
+	$this-&gt;dbforge-&gt;add_key('blog_id', TRUE);<br />
+	$this-&gt;dbforge-&gt;add_key('site_id', TRUE);<br />
 	// gives PRIMARY KEY `blog_id_site_id` (`blog_id`，`site_id`)<br />
 	<br />
 	$this-&gt;dbforge-&gt;add_key('blog_name');<br />
 	// gives KEY `blog_name` (`blog_name`)<br />
 	<br />
-	$this-&gt;dbforge-&gt;add_key(array('blog_name'，'blog_label'));<br />
+	$this-&gt;dbforge-&gt;add_key(array('blog_name', 'blog_label'));<br />
 	// gives KEY `blog_name_blog_label` (`blog_name`，`blog_label`)</code></p>
 <h2><a name="create_table" id="create_table"></a>Creating a table</h2>
 <p>After fields and keys have been declared，you can create a new table with</p>
 <p><code>$this-&gt;dbforge-&gt;create_table('table_name');<br />
 // gives CREATE TABLE table_name</code></p>
 <p>An optional second parameter set to TRUE adds an &quot;IF NOT EXISTS&quot; clause into the definition</p>
-<p><code>$this-&gt;dbforge-&gt;create_table('table_name'，TRUE);<br />
+<p><code>$this-&gt;dbforge-&gt;create_table('table_name', TRUE);<br />
 // gives CREATE TABLE IF NOT EXISTS table_name</code></p>
 <h2><a name="drop_table" id="drop_table"></a>Dropping a table</h2>
 <p>Executes a DROP TABLE sql</p>
@@ -190,7 +190,7 @@ already be running，since the forge class relies on it.</p>
 	// gives DROP TABLE IF EXISTS  table_name</code></p>
 <h2><a name="rename_table" id="rename_table"></a>Renaming a table</h2>
 <p>Executes a TABLE rename</p>
-<p><code>$this-&gt;dbforge-&gt;rename_table('old_table_name'，'new_table_name');<br />
+<p><code>$this-&gt;dbforge-&gt;rename_table('old_table_name', 'new_table_name');<br />
 	// gives ALTER TABLE old_table_name RENAME TO new_table_name</code></p>
 <h1><a name="modifying_tables" id="modifying_tables"></a>Modifying Tables</h1>
 <h2>$this-&gt;dbforge-&gt;add_column()</h2>
@@ -198,12 +198,12 @@ already be running，since the forge class relies on it.</p>
 <p><code>$fields = array(<br />
 	&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;'preferences' =&gt; array('type' =&gt; 'TEXT')<br />
 );<br />
-$this-&gt;dbforge-&gt;add_column('table_name'，$fields);<br />
+$this-&gt;dbforge-&gt;add_column('table_name', $fields);<br />
 <br />
 // gives ALTER TABLE table_name ADD   	preferences TEXT</code></p>
 <h2>$this-&gt;dbforge-&gt;drop_column()</h2>
 <p>Used to remove a column from a table. </p>
-<p><code>$this-&gt;dbforge-&gt;drop_column('table_name'，'column_to_drop');</code></p>
+<p><code>$this-&gt;dbforge-&gt;drop_column('table_name', 'column_to_drop');</code></p>
 <h2>$this-&gt;dbforge-&gt;modify_column()</h2>
 <p>The usage of this function is identical to add_column(), except it alters an existing column rather than adding a new one. In order to change the name you can add a &quot;name&quot; key into the field defining array.</p>
 <p><code>$fields = array(<br />
@@ -212,7 +212,7 @@ $this-&gt;dbforge-&gt;add_column('table_name'，$fields);<br />
 &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;'type' =&gt; 'TEXT',<br />
 &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;),<br />
 );<br />
-$this-&gt;dbforge-&gt;modify_column('table_name'，$fields);<br />
+$this-&gt;dbforge-&gt;modify_column('table_name', $fields);<br />
 	<br />
 	// gives ALTER TABLE table_name CHANGE   	old_name new_name TEXT </code></p>
 <p>&nbsp;</p>
