--- a/helpers/download_helper.html
+++ b/helpers/download_helper.html
@@ -69,7 +69,7 @@ Download 輔助函數
 
 <p>下列為可以使用的函數：</p>
 
-<h2>force_download('<var>filename</var>'，'<var>data</var>')</h2>
+<h2>force_download('<var>filename</var>', '<var>data</var>')</h2>
 
 <p>產生伺服器的標頭，強制資料被下載到您的電腦桌面。對檔案下載有幫助。第一個參數<strong>是你想要下載的檔案的名稱</strong>，第二個參數是檔案資料。 參考範例：</p>
 
@@ -77,7 +77,7 @@ Download 輔助函數
 $data = 'Here is some text!';<br />
 $name = 'mytext.txt';<br />
 <br />
-force_download($name，$data);
+force_download($name, $data);
 </code>
 
 <p>如果你想在你的伺服器上下載一個現有的檔案，你必需將檔案讀到一字串中:</p>
@@ -86,7 +86,7 @@ force_download($name，$data);
 $data = file_get_contents("/path/to/photo.jpg"); // Read the file's contents<br />
 $name = 'myphoto.jpg';<br />
 <br />
-force_download($name，$data);
+force_download($name, $data);
 </code>
 
 
