--- a/libraries/ftp.html
+++ b/libraries/ftp.html
@@ -84,7 +84,7 @@ $config['debug']	= TRUE;<br />
 <br />
 $this->ftp->connect($config);<br />
 <br />
-$this->ftp->upload('/local/path/to/myfile.html'，'/public_html/myfile.html'，'ascii'，0775);<br />
+$this->ftp->upload('/local/path/to/myfile.html', '/public_html/myfile.html', 'ascii', 0775);<br />
 <br />
 $this->ftp->close();
 
@@ -123,7 +123,7 @@ $config['debug']	= TRUE;<br />
 <br />
 $this->ftp->connect($config);<br />
 <br />
-$this->ftp->mirror('/path/to/myfolder/'，'/public_html/myfolder/');<br />
+$this->ftp->mirror('/path/to/myfolder/', '/public_html/myfolder/');<br />
 <br />
 $this->ftp->close();
 </code>
@@ -175,7 +175,7 @@ $this->ftp->connect($config);<br />
 <p>上傳一檔案至伺服器，本地端路徑及遠端路徑為必要參數，傳輸模式及檔案權限為選擇性參數。參考範例如下：</p>
 
 
-<code>$this->ftp->upload('/local/path/to/myfile.html'，'/public_html/myfile.html'，'ascii'，0775);</code>
+<code>$this->ftp->upload('/local/path/to/myfile.html', '/public_html/myfile.html', 'ascii', 0775);</code>
 
 <p><strong>傳輸模式包含:</strong>&nbsp; <kbd>ascii</kbd>，<kbd>binary</kbd>，及<kbd>auto</kbd> (預設值)。若是選擇
 <kbd>auto</kbd> 模式，則會根據來源檔的副檔名來決定所要使用的傳輸模式。</p>
@@ -200,7 +200,7 @@ Example:</p>
 
 <code>
 // 更改 green.html 檔名為 blue.html<br />
-$this->ftp->rename('/public_html/foo/green.html'，'/public_html/foo/blue.html');
+$this->ftp->rename('/public_html/foo/green.html', '/public_html/foo/blue.html');
 </code>
 
 <h2>$this->ftp->move()</h2>
@@ -208,7 +208,7 @@ $this->ftp->rename('/public_html/foo/green.html'，'/public_html/foo/blue.html')
 
 <code>
 // 將 blog.html 從"joe" 目錄移至"fred" 目錄<br />
-$this->ftp->move('/public_html/joe/blog.html'，'/public_html/fred/blog.html');
+$this->ftp->move('/public_html/joe/blog.html', '/public_html/fred/blog.html');
 </code>
 
 <p>注意：若目的檔名與來源檔名不同，則檔案將被重新命名。</p>
@@ -249,7 +249,7 @@ print_r($list);
 <p>遞迴讀取本地端目錄下所有內容（包含子目錄及檔案），並透過FTP建立此目錄之鏡像。來源目錄之完整結構皆會被複製到伺服器端，需提供來源路徑及目的路徑作為參數：</p>
 
 <code>
-$this->ftp->mirror('/path/to/myfolder/'，'/public_html/myfolder/');
+$this->ftp->mirror('/path/to/myfolder/', '/public_html/myfolder/');
 </code>
 
 
@@ -260,7 +260,7 @@ $this->ftp->mirror('/path/to/myfolder/'，'/public_html/myfolder/');
 
 <code>
 // 建立一名為"bar" 的目錄<br />
-$this->ftp->mkdir('/public_html/foo/bar/'，DIR_WRITE_MODE);
+$this->ftp->mkdir('/public_html/foo/bar/', DIR_WRITE_MODE);
 </code>
 
 
@@ -270,7 +270,7 @@ $this->ftp->mkdir('/public_html/foo/bar/'，DIR_WRITE_MODE);
 
 <code>
 // 更改"bar" 目錄的權限為 777<br />
-$this->ftp->chmod('/public_html/foo/bar/'，DIR_WRITE_MODE);
+$this->ftp->chmod('/public_html/foo/bar/', DIR_WRITE_MODE);
 </code>
 
 
